# template-insight-plugin

./: .gitignore  LICENSE  README.md
.github/workflows/: plantuml.yml
config/: default.json  development.json  issue_kinds.json  schema.json
core-cpp/: CMakeLists.txt
core-cpp/include/: api.hpp  config.hpp  issues.hpp  model.hpp
core-cpp/src/: api.cpp  config.cpp  issues.cpp  main_cli.cpp
core-cpp/tests/: CMakeLists.txt  test_analyzer.cpp  test_config.cpp  test_issue_registry.cpp
docs/architecture/: core-cpp-classes.puml  module-cli.puml  module-clion-plugin.puml  module-core-cpp.puml  modules-overview.puml
